--- a/tpl/clubs.html
+++ b/tpl/clubs.html
@@ -4,8 +4,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">Portfolio</h2>
-        <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+        <h2 class="section-heading text-uppercase">Clubs</h2>
+        <h3 class="section-subheading text-muted">----------</h3>
       </div>
     </div>
     <div class="row">
@@ -19,8 +19,8 @@
           <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Threads</h4>
-          <p class="text-muted">Illustration</p>
+          <h4>CLUB 1</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
@@ -33,8 +33,8 @@
           <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Explore</h4>
-          <p class="text-muted">Graphic Design</p>
+          <h4>CLUB 2</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
@@ -47,8 +47,8 @@
           <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Finish</h4>
-          <p class="text-muted">Identity</p>
+          <h4>CLUB 3</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
@@ -61,8 +61,8 @@
           <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Lines</h4>
-          <p class="text-muted">Branding</p>
+          <h4>CLUB 4</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
@@ -75,8 +75,8 @@
           <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Southwest</h4>
-          <p class="text-muted">Website Design</p>
+          <h4>CLUB 5</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
@@ -89,8 +89,92 @@
           <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Window</h4>
-          <p class="text-muted">Photography</p>
+          <h4>CLUB 6</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+        </a>
+        <div class="portfolio-caption">
+          <h4>CLUB 7</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+        </a>
+        <div class="portfolio-caption">
+          <h4>CLUB 8</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+        </a>
+        <div class="portfolio-caption">
+          <h4>CLUB 9</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+        </a>
+        <div class="portfolio-caption">
+          <h4>CLUB 10</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+        </a>
+        <div class="portfolio-caption">
+          <h4>CLUB 11</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+        </a>
+        <div class="portfolio-caption">
+          <h4>CLUB 12</h4>
+          <p class="text-muted">sve info staviti u modal(od koliko do koliko radi,vrsta muzike...)</p>
         </div>
       </div>
     </div>
@@ -303,4 +387,3 @@
       </div>
     </div>
   </div>
-  
