--- a/tpl/events.html
+++ b/tpl/events.html
@@ -1,24 +1,19 @@
-<!-- Team -->
+<!-- Events -->
 <section class="bg-light" id="team">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-        <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+        <h2 class="section-heading text-uppercase">Events</h2>
+        <h3 class="section-subheading text-muted">- all events -</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
         <div class="team-member">
           <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-          <h4>Kay Garland</h4>
+          <h4>EVENT 1</h4>
           <p class="text-muted">Lead Designer</p>
           <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
             <li class="list-inline-item">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -26,7 +21,12 @@
             </li>
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+              <i class="fab fa-instagram"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
               </a>
             </li>
           </ul>
@@ -35,14 +35,9 @@
       <div class="col-sm-4">
         <div class="team-member">
           <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-          <h4>Larry Parker</h4>
+          <h4>EVENT 2</h4>
           <p class="text-muted">Lead Marketer</p>
           <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
             <li class="list-inline-item">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -50,7 +45,12 @@
             </li>
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+              <i class="fab fa-instagram"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
               </a>
             </li>
           </ul>
@@ -59,14 +59,9 @@
       <div class="col-sm-4">
         <div class="team-member">
           <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-          <h4>Diana Pertersen</h4>
+          <h4>EVENT 3</h4>
           <p class="text-muted">Lead Developer</p>
           <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
             <li class="list-inline-item">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
@@ -74,7 +69,84 @@
             </li>
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+              <i class="fab fa-instagram"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="team-member">
+          <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+          <h4>EVENT 4</h4>
+          <p class="text-muted">Lead Developer</p>
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="team-member">
+          <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+          <h4>EVENT 5</h4>
+          <p class="text-muted">Lead Developer</p>
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="team-member">
+          <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+          <h4>EVENT 6</h4>
+          <p class="text-muted">Lead Developer</p>
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
               </a>
             </li>
           </ul>
