--- a/tpl/events.html
+++ b/tpl/events.html
@@ -15,17 +15,17 @@
           <p class="text-muted">Lead Designer</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
               <i class="fab fa-instagram"></i>
             </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
@@ -39,17 +39,17 @@
           <p class="text-muted">Lead Marketer</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
               <i class="fab fa-instagram"></i>
             </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
@@ -63,17 +63,17 @@
           <p class="text-muted">Lead Developer</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
               <i class="fab fa-instagram"></i>
             </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
@@ -87,17 +87,17 @@
           <p class="text-muted">Lead Developer</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
               <i class="fab fa-instagram"></i>
             </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
@@ -111,17 +111,17 @@
           <p class="text-muted">Lead Developer</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
               <i class="fab fa-instagram"></i>
             </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
@@ -135,17 +135,17 @@
           <p class="text-muted">Lead Developer</p>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
               <i class="fab fa-instagram"></i>
             </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#events">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
