--- a/tpl/home.html
+++ b/tpl/home.html
@@ -35,10 +35,10 @@
     <div class="col-md-4">
       <ul class="list-inline quicklinks">
         <li class="list-inline-item">
-          <a href="#">Privacy Policy</a>
+          <a href="#home">Privacy Policy</a>
         </li>
         <li class="list-inline-item">
-          <a href="#">Terms of Use</a>
+          <a href="#home">Terms of Use</a>
         </li>
       </ul>
     </div>
