--- a/tpl/about.html
+++ b/tpl/about.html
@@ -16,11 +16,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>2009-2011</h4>
-                    <h4 class="subheading">Our Humble Beginnings</h4>
+                    <h4>2019</h4>
+                    <h4 class="subheading">ur Humble Beginnings</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Sarajevo’s nightclubs differ from what you may be familiar with back at home, and it’s worth mentioning a few things to prepare yourself. Expect lots of cigarette smoke in a small enclosed area. The level of service varies too, and you could find yourself getting the true Yugoslavian experience with stern waiters who seem always to ignore you. If you can deal with these, you’ll love the following places to hang out in Sarajevo!</p>
                   </div>
                 </div>
               </li>
@@ -30,12 +30,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4>March 2019</h4>
+                    <h4 class="subheading">Idea is Born</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                  </div>
+                    <p class="text-muted">reates the perfect atmosphere of a jazz club inside a moody, dimly lit basement.</p>
                 </div>
               </li>
               <li>
