--- a/tpl/clubs.html
+++ b/tpl/clubs.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Clubs</h2>
-        <h3 class="section-subheading text-muted">----------</h3>
+        <h3 class="section-subheading text-muted">See our clubs</h3>
       </div>
     </div>
     <div class="row">
