--- a/tpl/about.html
+++ b/tpl/about.html
@@ -17,10 +17,11 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4>2019</h4>
-                    <h4 class="subheading">ur Humble Beginnings</h4>
+                    <h4 class="subheading">Our Clubs</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Sarajevo’s nightclubs differ from what you may be familiar with back at home, and it’s worth mentioning a few things to prepare yourself. Expect lots of cigarette smoke in a small enclosed area. The level of service varies too, and you could find yourself getting the true Yugoslavian experience with stern waiters who seem always to ignore you. If you can deal with these, you’ll love the following places to hang out in Sarajevo!</p>
+
                   </div>
                 </div>
               </li>
@@ -30,11 +31,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2019</h4>
-                    <h4 class="subheading">Idea is Born</h4>
+                    <h4>2019</h4>
+                    <h4 class="subheading">Creating</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">reates the perfect atmosphere of a jazz club inside a moody, dimly lit basement.</p>
+                    <p class="text-muted">reates the perfect atmosphere of a jazz club inside a moody, dimly lit basement.</p>                  </div>
                 </div>
               </li>
               <li>
@@ -43,8 +44,8 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
+                    <h4>2019</h4>
+                    <h4 class="subheading">Full Service</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -57,8 +58,8 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>July 2014</h4>
-                    <h4 class="subheading">Phase Two Expansion</h4>
+                    <h4>2019</h4>
+                    <h4 class="subheading">Relex</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
