--- a/tpl/reservation.html
+++ b/tpl/reservation.html
@@ -6,6 +6,7 @@
           <div class="col-sm-3"></div>
           <div class="col-sm-6">
             <form id="toDoForm" action="rest/add" method="post">
+              <img src="img/reservation.jpg" width="800" height="500">
            <div class="form-group">
                <label for="club">*In first row choose which club you want to reserved</label>
                <select name="club" class="form-control">
